<resources>
    <string name="app_name">Coffee</string>
    <string name="khuongviettai">Khuong Viet Tai</string>
    <string name="splash_text">Code by Khuong Viet Tai</string>

    <!--  menu bottom  -->
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="cart">Cart</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="order_detail">Order Detail</string>
    <string name="payment_method">Payment method</string>
    <string name="payment_cash">Cash</string>
    <string name="address">Address</string>
    <string name="message_enter_info_order">Please complete all information</string>

    <string name="msg_get_date_error">An error occurred, please try again later</string>


    // action
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>

    <!--  Account  -->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="msg_waiting_message">Please wait ...</string>
    <string name="msg_sign_in_error">Login failed, please try again</string>
    <string name="msg_email_require">Please enter your email</string>
    <string name="msg_password_require">Please enter your password</string>
    <string name="msg_email_invalid">Your email is invalid</string>
    <string name="msg_sign_up_error">Registration failed, please try again</string>
    <string name="msg_change_password_successfully">Change password successfully</string>
    <string name="msg_reset_password_successfully">Password reset is successful, please check your email</string>
    <string name="msg_old_password_require">Please enter old password</string>
    <string name="msg_new_password_require">Please enter new password</string>
    <string name="msg_confirm_password_require">Please enter confirm new password</string>
    <string name="msg_old_password_invalid">Old password is incorrect</string>
    <string name="msg_confirm_password_invalid">Confirm new password does not match</string>
    <string name="msg_new_password_invalid">The new password is the same as the old password</string>


    <!--  Show mess  -->
    <string name="msg_exit_app">Do you want to exit the application?</string>
    <string name="agree">Agree</string>
    <string name="email">Email</string>
    <string name="message_enter_infor_order">Please fill in all shipping information</string>
    <string name="msg_order_success">Order is successful, please check your order in History</string>

    <!--  OnBoarding  -->
    <string name="get_start">Get Start</string>
    <!--  Shop  -->
    <string name="search">Search</string>

    <!--  product  -->
    <string name="price">Price:</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="topping">Topping</string>
    <string name="size">Size</string>
    <string name="note_sie">size M + 10,000, size, L + 20,000</string>
    <string name="note_topping">choose only 1 extra topping, + 10,000</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="basic">Basic</string>
    <string name="label_sub">-</string>
    <string name="label_add">+</string>
    <string name="label_quantity_1">1</string>
    <string name="quantity">Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="recommended_products">Recommended products</string>
    <string name="no_topping">No Topping</string>
    <string name="suggestions_for_you">Suggestions for you</string>

    <!--  Cart  -->
    <string name="total">Total:</string>
    <string name="price_0">0 VND</string>
    <string name="order_cart">Order</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="message_delete">Are you sure you want to delete?</string>

    <!--  Profile  -->
    <string name="utilities">Utilities</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="policy">Policy</string>
    <string name="contact">Contact</string>
    <string name="sign_out">Sign out</string>
    <string name="change_password">Change password</string>
    <string name="password_old">Old password</string>
    <string name="password_new">New password</string>
    <string name="have_not_account">Don\'t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="feedback">Feedback</string>

    <!--  Login Register  -->
    <string name="login">Login</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="full_name">Full name</string>

    <string name="msg_name">Please enter your name</string>
    <string name="msg_phone">Please enter your phone</string>
    <string name="msg_password">Please enter your password</string>
    <string name="msg_confirm_password">Two passwords do not match</string>
    <string name="msg_phone_exist">Phone number already exists</string>
    <string name="msg_register_success">Registration Success</string>
    <string name="msg_register_failed">Registration failed</string>
    <string name="send_feedback_success">Feedback submitted successfully!</string>
    <string name="reset_password">Reset password</string>

    <string name="feedback_name">Fullname (*)</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_phone">Phone</string>
    <string name="feedback_comment">Content (*)</string>
    <string name="send_feedback">Send</string>
    <string name="name_require">Please enter your first and last name</string>
    <string name="comment_require">Please enter your feedback</string>


    <string name="label_facebook">Facebook</string>
    <string name="label_call">Call Phone</string>
    <string name="label_gmail">Gmail</string>
    <string name="label_zalo">Zalo</string>

    <string name="label_id">Code orders:</string>
    <string name="label_address">Receiving address:</string>
    <string name="label_price">Total amount:</string>
    <string name="label_date">Order date:</string>
    <string name="label_payment">Pay:</string>
    <string name="label_menu">Menu:</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>