<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12"
        android:src="@drawable/arrow_back"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dimen_18">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_22"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:hint="@string/password_old"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/edt_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/password_new"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:background="@drawable/bg_brown_shape_corner_6"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14" />

    </LinearLayout>
</RelativeLayout>