<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:viewBindingIgnore="true"
    android:padding="@dimen/dimen_10"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/layout_infor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/layout_image"
                android:layout_width="@dimen/dimen_100"
                android:layout_height="@dimen/dimen_80"
                android:layout_centerVertical="true"
                app:cardCornerRadius="@dimen/dimen_6">

                <ImageView
                    android:id="@+id/img_food_cart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_food_name_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_food_price_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_12" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="@string/note_sie"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="@dimen/dimen_35"
                    android:layout_height="wrap_content"/>
            </RadioGroup>

            <TextView
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="@string/note_topping"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="@dimen/dimen_35"
                    android:layout_height="wrap_content"/>
            </RadioGroup>

        </LinearLayout>
    </LinearLayout>




</RelativeLayout>