<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:viewBindingIgnore="true"
    android:orientation="vertical"
    android:padding="@dimen/dimen_10"
    tools:ignore="Autofill,LabelFor" >

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="@dimen/dimen_40"
        android:layout_height="@dimen/dimen_30"
        android:src="@drawable/arrow_back"
        android:layout_marginTop="@dimen/dimen_10"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/full_name"
        android:textSize="@dimen/text_size_12" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:inputType="text"
        android:layout_marginTop="@dimen/dimen_5"
        android:padding="@dimen/dimen_12"
        android:background="@drawable/bg_white_shape_border_red_corner_6"
        android:imeOptions="actionNext"
        android:textSize="@dimen/text_size_12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/phone"
        android:textSize="@dimen/text_size_12" />

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:inputType="number"
        android:background="@drawable/bg_white_shape_border_red_corner_6"
        android:layout_marginTop="@dimen/dimen_5"
        android:padding="@dimen/dimen_12"
        android:imeOptions="actionNext"
        android:textSize="@dimen/text_size_12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/address"
        android:textSize="@dimen/text_size_12" />

    <EditText
        android:id="@+id/edt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:inputType="text"
        android:background="@drawable/bg_white_shape_border_red_corner_6"
        android:padding="@dimen/dimen_12"
        android:layout_marginTop="@dimen/dimen_5"
        android:imeOptions="actionDone"
        android:textSize="@dimen/text_size_12" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:layout_marginBottom="@dimen/dimen_10"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_agree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_brown_shape_corner_6"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:text="@string/agree"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_12" />
    </LinearLayout>
</LinearLayout>