<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/bungee_regular"
        android:textSize="40sp"
        android:layout_marginTop="@dimen/dimen_70"
        android:layout_marginStart="@dimen/dimen_20"
        />


    <LinearLayout
        android:layout_marginTop="@dimen/dimen_30"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginEnd="@dimen/dimen_20"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_login_username"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_60"
                android:inputType="phone"
                android:background="@drawable/bg_white_shape_border_red_corner_6"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_20"
                android:padding="@dimen/dimen_18"/>
            <TextView
                android:padding="@dimen/dimen_4"
                android:background="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_marginLeft="@dimen/dimen_40"
                android:layout_marginTop="@dimen/dimen_5"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_60"
                android:background="@drawable/bg_white_shape_border_red_corner_6"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_20"
                android:padding="@dimen/dimen_18"/>
            <TextView
                android:padding="@dimen/dimen_4"
                android:background="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginLeft="@dimen/dimen_40"
                android:layout_marginTop="@dimen/dimen_5"
                />
        </RelativeLayout>


        <RelativeLayout
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/ll_already_account"

                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_2"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_size_14"/>
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_right"/>
            </LinearLayout>
        </RelativeLayout>
        <Button
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_brown_shape_corner_6"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18"/>

        <TextView
            android:id="@+id/tv_login_change_register"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"
            android:text="@string/register"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:textSize="@dimen/text_size_18"/>

    </LinearLayout>

</LinearLayout>